[gd_scene load_steps=11 format=3 uid="uid://bbvo37joshkmr"]

[ext_resource type="Script" path="res://player/weapons/katana.gd" id="1_62fyx"]
[ext_resource type="AudioStream" uid="uid://i6ekra65r3fc" path="res://sound/sfx/Power ups and power downs/Power_up_7.wav" id="2_sws7p"]
[ext_resource type="Texture2D" uid="uid://cgkomqgsq52dm" path="res://enemy/weapons/bullet_shapes/slice.png" id="4_lt71a"]
[ext_resource type="Texture2D" uid="uid://dpi8u4m0cw0i1" path="res://player/weapons/mineA.png" id="4_sid07"]
[ext_resource type="Texture2D" uid="uid://c4865weyxw0ji" path="res://assets/Effects/Explosion.png" id="5_48ver"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r274r"]
size = Vector2(290, 22.5)

[sub_resource type="Animation" id="Animation_x1hwl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nxdwk"]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_48ver")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_18y22"]
resource_name = "moving"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_sid07")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oxx66"]
_data = {
"RESET": SubResource("Animation_x1hwl"),
"explode": SubResource("Animation_nxdwk"),
"moving": SubResource("Animation_18y22")
}

[node name="Katana" type="Area2D"]
collision_mask = 26
script = ExtResource("1_62fyx")
firing_sound = ExtResource("2_sws7p")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.14159
scale = Vector2(9.92787, 0.605066)
texture = ExtResource("4_lt71a")
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 0.25)
shape = SubResource("RectangleShape2D_r274r")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oxx66")
}

[node name="DistanceTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="DistanceTimer" to="." method="_on_distance_timer_timeout"]
